tests/errors/first_stage/.extern/invalid_lbl_name/invalid_lbl_name.as
; the extern's argument's name is invalid for a label
.extern MY$EXT